Added Catalog Display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Depot</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
+<head>
+  <title>Global Foods Shop</title>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= csrf_meta_tags %>
+</head>
 <body class="<%= controller.controller_name %>">
+  <div id="banner">
+    <%= image_tag("Logo1.png") %>
+    <%= @page_title || "Global Food Store" %>
+  </div>
+  <div id="columns">
+    <div id="side">
+      <ul>
+        <li><a href="https://global-depot-test-biswass10.c9users.io/">Home</a></li>  
+        <li><a href="https://www.allrecipes.com/">Recipes</a></li>
+        <li><a href="http://www..../news">News</a></li>
+        <li><a href="http://www..../contact">Contact</a></li>
+      </ul>
+    </div>
+    <div id="main">
+      <%= yield %>
+    </div>
+  </div>      
+
   
-    <%= yield %>
-  </body>
+</body>
 </html>
